Fixes toolbar crunch on small screens

--- a/src/components/CueEditor.css
+++ b/src/components/CueEditor.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   border-left: 0.5rem solid var(--primary-group-color);
-  background-color: var(--gray-900);
+  background-color: var(--color-darken);
   transition-property: border-color, background-color;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
