--- a/src/components/FormatControls.css
+++ b/src/components/FormatControls.css
@@ -1,3 +1,6 @@
+.format-controls {
+  grid-area: format;
+}
 .color-button {
   background-color: transparent;
   transition-property: color, background-color;
