--- a/src/components/ZoomRange.css
+++ b/src/components/ZoomRange.css
@@ -1,5 +1,6 @@
 .zoom-range {
   display: flex;
+  grid-area: zoom;
 }
 .zoom-range > button {
   padding: 0.5rem;
